# reMember

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: enhancement-template.md
config/: base.toml  local.toml  production.toml
crates/mono/: Cargo.toml
crates/mono/src/: main.rs
crates/mono/src/config/: settings.rs
crates/scripts-lib/: Cargo.toml
crates/scripts-lib/scripts/: Cargo.toml
crates/scripts-lib/scripts/src/: job_adv.rs  lib.rs  samples.rs
crates/scripts-lib/src/: lib.rs
crates/shroom-data/: Cargo.toml
crates/shroom-data/migration/: Cargo.toml
crates/shroom-data/migration/src/: lib.rs  m20220101_000001_create_table.rs
crates/shroom-data/migration/src/helper/: mod.rs  shroom_tbl.rs  shroom_ty.rs  stats.rs
crates/shroom-data/src/: blob.rs  entity_ext.rs  lib.rs
crates/shroom-data/src/entities/: account.rs  ban.rs  character.rs  equip_item.rs  func_key_map.rs  inventory_slot.rs  item_stack.rs  mod.rs  pet_item.rs  prelude.rs  quest.rs  sea_orm_active_enums.rs  skill.rs
crates/shroom-data/src/inventory/: index_map.rs  mod.rs  stack.rs
crates/shroom-data/src/model/: inv.rs  item.rs  mod.rs  skill.rs  stats.rs
crates/shroom-data/src/proto_mapper/: char.rs  mod.rs
crates/shroom-data/src/scripts/: mod.rs
crates/shroom-data/src/services/: account.rs  character.rs  item.rs  mod.rs  password.rs  server_service.rs
crates/shroom-data/src/util/: mod.rs
crates/shroom-game/: Cargo.toml
crates/shroom-game/src/: game.rs  lib.rs  repl.rs  system.rs
crates/shroom-game/src/field/: mod.rs
crates/shroom-game/src/life/: drop_item.rs  employee.rs  minor.rs  mod.rs  npc.rs  reactor.rs
crates/shroom-game/src/life/char/: inv.rs  mod.rs  pet.rs  quest.rs  stats.rs  summon.rs
crates/shroom-game/src/life/char/buffs/: mod.rs  pkt.rs
crates/shroom-game/src/life/char/class/: mod.rs
crates/shroom-game/src/life/char/class/archer/: mod.rs
crates/shroom-game/src/life/char/class/mage/: mod.rs
crates/shroom-game/src/life/char/class/pirate/: mod.rs
crates/shroom-game/src/life/char/class/thief/: mod.rs
crates/shroom-game/src/life/char/class/warrior/: mod.rs
crates/shroom-game/src/life/mob/: buffs.rs  mod.rs  pool.rs  skill.rs
crates/shroom-game/src/services/: shared.rs
crates/shroom-game/src/session/: mod.rs  shroom_session_backend.rs  shroom_session_manager.rs
crates/shroom-login/: Cargo.toml
crates/shroom-login/src/: config.rs  lib.rs  login_state.rs
crates/shroom-meta/: Cargo.toml
crates/shroom-meta/src/: drops.rs  exp_table.rs  fmt.rs  lib.rs  shared.rs  srv.rs  svc.rs  twod.rs
crates/shroom-meta/src/buffs/: char.rs  keys.rs  mob.rs  mod.rs
crates/shroom-meta/src/class/: archer.rs  mage.rs  mod.rs  pirate.rs  thief.rs  warrior.rs
crates/shroom-meta/src/field/: fh_tree.rs  mod.rs
crates/shroom-meta/src/id/: item_id.rs  job_id.rs  map_id.rs  mob_skill_id.rs  mod.rs  skill_id.rs
crates/shroom-meta/src/item/: it.rs  mod.rs
crates/shroom-meta/src/mob/: mod.rs
crates/shroom-meta/src/npc/: mod.rs
crates/shroom-meta/src/quest/: mod.rs
crates/shroom-meta/src/skill/: eval.pest  eval.rs  mod.rs
crates/shroom-meta/src/tmpl/: equip.rs  item.rs  mod.rs
crates/shroom-meta/src/util/: search.rs
crates/shroom-metagen/: Cargo.toml
crates/shroom-metagen/src/: main.rs  wz2.rs
crates/shroom-metagen/src/schemas/: field_mapper.rs  item_mapper.rs  mob_mapper.rs  mob_skill_mapper.rs  mod.rs  quest_mapper.rs  shroom_schemas.rs  skill_mapper.rs
crates/shroom-proto95/: Cargo.toml
crates/shroom-proto95/src/: lib.rs  recv_opcodes.rs  send_opcodes.rs
crates/shroom-proto95/src/game/: chat.rs  drop.rs  field.rs  friend.rs  key_map.rs  macros.rs  mod.rs  party.rs  quest.rs  script.rs  shop.rs
crates/shroom-proto95/src/game/life/: affected_area.rs  employee.rs  message_box.rs  mob.rs  mod.rs  npc.rs  open_gate.rs  reactor.rs  summon.rs  town_portal.rs
crates/shroom-proto95/src/game/user/: char.rs  effect.rs  mod.rs  pet.rs  remote.rs  secondary_stats.rs
crates/shroom-proto95/src/login/: char.rs  mod.rs
crates/shroom-proto95/src/shared/: char.rs  inventory.rs  item.rs  job.rs  mod.rs  movement.rs
crates/shroom-script/: Cargo.toml
crates/shroom-script/src/: lib.rs  npc.rs  poll_state.rs
crates/shroom-srv/: Cargo.toml
crates/shroom-srv/src/: lib.rs  runtime.rs
crates/shroom-srv/src/act/: broadcast.rs  mod.rs  room.rs  session.rs  system.rs  tick.rs
crates/shroom-srv/src/game/: buff_manager.rs  id_ix_map.rs  inventory.rs  mod.rs  pool.rs  stack_inv.rs
crates/shroom-srv/src/net/: acceptor.rs  session.rs  socket.rs  system.rs
crates/shroom-srv/src/new/: acceptor.rs  mod.rs  room.rs  runtime.rs  session.rs  sys.rs
crates/shroom-srv/src/rpc/: mod.rs  router.rs
crates/shroom-srv/src/session/: migration_manager.rs  mod.rs  session_manager.rs
crates/shroom-srv/src/time/: clock.rs  interval.rs
crates/shroom-srv/src/util/: broadcast.rs  delay_queue.rs  encode_buffer.rs  poll_state.rs  supervised_task.rs  test_util.rs
data/game_data/: Cargo.toml
data/game_data/src/: lib.rs
docker/: Dockerfile  build_docker.sh  create_archive.sh  docker-compose.yml
