[package]
name = "shroom-login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
tokio = "1"
shroom-pkt = "0.1"
shroom-srv = "0.1"
shroom-net = { version = "0.4", default-features = false, features = [] }
shroom-data = { version = "0.1.0", path = "../shroom-data" }
shroom-proto95 = { version = "0.1.0", path = "../shroom-proto95" }
shroom-meta = { version = "0.1", path = "../shroom-meta" }
shroom-game = { version = "0.1.0", path = "../shroom-game" }
either = "1.10.0"
