[package]
name = "shroom-metagen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = "1"
rayon = "1"
itertools = "0.12"
shroom-meta = { path="../shroom-meta" }
bincode = "1.3.3"
serde_json = "1.0.115"
regress = "0.9"
enum-map = { version = "2.7.3" , features = ["serde"]}
