[package]
name = "shroom-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
pin-project-lite = "0.2"
shroom-meta = { path = "../shroom-meta" }
shroom-proto95 = { path = "../shroom-proto95" }