[package]
name = "game_data"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen-schema"
path = "src/bin/gen_schema.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bincode = "1.3"
convert_case = "0.6"
either = { version = "1", features = ["serde"] }
flatbuffers = "23"
glob = "0.3"
quick-xml = "0.31"
quote = "1"
rayon = "1.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
